--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 } */
 
 body{
-    font-family: 'Montserrat', sans-serif!important;
+    font-family: 'Montserrat', sans-serif;
 }
 
 main{
@@ -24,14 +24,45 @@ main{
     width: 200px!important;
 }
 
+/* HEADER */
+header nav{
+    background-color: #41C083;
+}
+
+header nav a img{
+    width: 70px;
+    height: 70px;
+    margin-left: 10px;
+}
+
+/* FOOTER */
+
 footer{
     background-color: #41C083;
 }
+
+footer div {
+    background-color: #41C083;
+}
+
+footer div img{
+    width: 100px;
+    height: 100px;
+}
+/* HOME */
+
+div.imgCa div img{
+    width: 540px;
+    height: 810px;
+}
+
+/* ABOUT */
 
 .fullH{
     height: 100vh;
 }
 
+/* SHOP */
 .section-products {
     padding: 80px 0 54px;
 }
@@ -141,7 +172,6 @@ footer{
     line-height: 40px;
     background-color: #ffffff;
     color: #444444;
-    text-align: center;
     box-shadow: 0 2px 20px rgb(50 50 50 / 10%);
     transition: color 0.2s;
 }
