--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header nav a img{
     margin-left: 10px;
 }
 
+
 /* FOOTER */
 
 footer{
@@ -110,19 +111,19 @@ div.imgCa div img{
 		transform: scale(1.2,1.2) rotate(5deg);
 }
 
-.section-products #product-1 .part-1::before {
+.section-products .product-1.single-product .part-1::before {
     background: url("../images/productosCuadrados/2.png") no-repeat center;
     background-size: cover;
 		transition: all 0.3s;
 }
 
 
-.section-products #product-3 .part-1::before {
+.section-products .product-3.single-product .part-1::before {
     background: url("../images/productosCuadrados/3.png") no-repeat center;
     background-size: cover;
 }
 
-.section-products #product-4 .part-1::before {
+.section-products .product-4.single-product .part-1::before {
     background: url("../images/productosCuadrados/1.png") no-repeat center;
     background-size: cover;
 }
