--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,16 @@ header nav a img{
     margin-left: 10px;
 }
 
+@media (max-width: 768px) {
+    header nav button{
+        margin-right: 25px;
+    }
+
+    header nav div ul li a{
+        text-align: center;
+    }
+}
+
 
 /* FOOTER */
 
