--- a/sass/main.css
+++ b/sass/main.css
@@ -83,15 +83,11 @@ section .fullH {
   opacity: 0;
   transition: bottom 0.5s, opacity 0.5s;
 }
-.section-products .single-product:hover .part-1 ul {
-  bottom: 30px;
-  opacity: 1;
-}
-.section-products .single-product:hover .part-1 ul li {
+.section-products .single-product .part-1 ul li {
   display: inline-block;
   margin-right: 4px;
 }
-.section-products .single-product:hover .part-1 ul li a {
+.section-products .single-product .part-1 ul li a {
   display: inline-block;
   width: 40px;
   height: 40px;
@@ -101,26 +97,23 @@ section .fullH {
   box-shadow: 0 2px 20px rgba(50, 50, 50, 0.1);
   transition: color 0.2s;
 }
-.section-products .single-product:hover .part-1 ul li a:hover {
+.section-products .single-product .part-1 ul li a:hover {
   color: #fe302f;
 }
-.section-products .single-product:hover::before {
-  transform: scale(1.2, 1.2) rotate(5deg);
-}
-.section-products .single-product:hover .part-2 .product-title {
+.section-products .single-product .part-2 .product-title {
   font-size: 1rem;
 }
-.section-products .single-product:hover .part-2 h4 {
+.section-products .single-product .part-2 h4 {
   display: inline-block;
   font-size: 1rem;
 }
-.section-products .single-product:hover .part-2 .product-old-price {
+.section-products .single-product .part-2 .product-old-price {
   position: relative;
   padding: 0 7px;
   margin-right: 2px;
   opacity: 0.6;
 }
-.section-products .single-product:hover .part-2 .product-old-price::after {
+.section-products .single-product .part-2 .product-old-price::after {
   position: absolute;
   content: "";
   top: 50%;
@@ -130,16 +123,23 @@ section .fullH {
   background-color: #444444;
   transform: translateY(-50%);
 }
-.section-products .single-product .product-1 .part-1::before {
+.section-products .single-product:hover .part-1::before {
+  transform: scale(1.2, 1.2) rotate(5deg);
+}
+.section-products .single-product:hover .part-1 ul {
+  bottom: 30px;
+  opacity: 1;
+}
+.section-products .product-1.single-product .part-1::before {
   background: url("../images/productosCuadrados/2.png") no-repeat center;
   background-size: cover;
   transition: all 0.3s;
 }
-.section-products .single-product .product-3 .part-1::before {
+.section-products .product-3.single-product .part-1::before {
   background: url("../images/productosCuadrados/3.png") no-repeat center;
   background-size: cover;
 }
-.section-products .single-product .product-4 .part-1::before {
+.section-products .product-4.single-product .part-1::before {
   background: url("../images/productosCuadrados/1.png") no-repeat center;
   background-size: cover;
 }
